force-app/main/default/objects/Fleet_Severity_Policy__mdt/Fleet_Severity_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Severity Policy</label>
    <pluralLabel>Fleet Severity Policies</pluralLabel>
</CustomObject>