force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Approval_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Approval_Queue_Id__c</fullName>
    <label>Approval Queue Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>