force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Auto_Action__c.field-meta.xml
<CustomField>
    <fullName>Auto_Action__c</fullName>
    <label>Auto Action</label>
    <type>Text</type>
    <length>40</length>
</CustomField>