force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Auto_Close_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_After_Days__c</fullName>
    <label>Auto Close After Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>