force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Notify_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Notify_Queue_Id__c</fullName>
    <label>Notify Queue Id</label>
    <type>Text</type>
    <length>40</length>
</CustomField>