force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Requires_Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Requires_Custom_Permission__c</fullName>
    <label>Requires Custom Permission</label>
    <type>Text</type>
    <length>80</length>
</CustomField>