force-app/main/default/objects/Fleet_Severity_Policy__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Text</type>
    <length>40</length>
</CustomField>